--- a/.github/workflows/pypi-upload.yml
+++ b/.github/workflows/pypi-upload.yml
@@ -37,7 +37,7 @@ jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-18.04
-    if: ${{ always() && (needs.test.result=='success'}}
+    if: ${{ always() && (needs.test.result=='success') }}
     needs: [test]
 
     steps:
