--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,10 @@ log_level = 20
 log_date_format = "%Y-%m-%d %H:%M:%S"
 log_format = "%(asctime)s %(levelname)s %(message)s"
 
+# Black Code Formatter
+[tool.black]
+line-length = 120
+
 ################
 ### Scripts: ###
 ################
