--- a/exemples/new-kr.config.json
+++ b/exemples/new-kr.config.json
@@ -199,7 +199,7 @@
     {
       "degree": 0,
       "name": "conjunction",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -208,7 +208,7 @@
     {
       "degree": 30,
       "name": "semi-sextile",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -217,7 +217,7 @@
     {
       "degree": 45,
       "name": "semi-square",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -226,7 +226,7 @@
     {
       "degree": 60,
       "name": "sextile",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -235,7 +235,7 @@
     {
       "degree": 72,
       "name": "quintile",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 0,
       "is_minor": 1,
@@ -244,7 +244,7 @@
     {
       "degree": 90,
       "name": "square",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -253,7 +253,7 @@
     {
       "degree": 120,
       "name": "trine",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -262,7 +262,7 @@
     {
       "degree": 135,
       "name": "sesquiquadrate",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -271,7 +271,7 @@
     {
       "degree": 144,
       "name": "biquintile",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -280,7 +280,7 @@
     {
       "degree": 150,
       "name": "quincunx",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 0,
@@ -289,7 +289,7 @@
     {
       "degree": 180,
       "name": "opposition",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -302,7 +302,7 @@
       "id": 0,
       "name": "Sun",
       "color": "#984b00",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "4",
       "label": "Sun",
@@ -312,7 +312,7 @@
       "id": 1,
       "name": "Moon",
       "color": "#150052",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "3",
       "label": "Moon",
@@ -322,7 +322,7 @@
       "id": 2,
       "name": "Mercury",
       "color": "#520800",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "2,5",
       "label": "Mercury",
@@ -332,7 +332,7 @@
       "id": 3,
       "name": "Venus",
       "color": "#400052",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "1,6",
       "label": "Venus",
@@ -342,7 +342,7 @@
       "id": 4,
       "name": "Mars",
       "color": "#540000",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "0",
       "label": "Mars",
@@ -352,7 +352,7 @@
       "id": 5,
       "name": "Jupiter",
       "color": "#47133d",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "8",
       "label": "Jupiter",
@@ -362,7 +362,7 @@
       "id": 6,
       "name": "Saturn",
       "color": "#124500",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "9",
       "label": "Saturn",
@@ -372,7 +372,7 @@
       "id": 7,
       "name": "Uranus",
       "color": "#6f0766",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "10",
       "label": "Uranus",
@@ -382,7 +382,7 @@
       "id": 8,
       "name": "Neptune",
       "color": "#06537f",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "11",
       "label": "Neptune",
@@ -392,7 +392,7 @@
       "id": 9,
       "name": "Pluto",
       "color": "#713f04",
-      "visible": 0,
+      "active": 0,
       "element_points": 10,
       "zodiac_relation": "7",
       "label": "Pluto",
@@ -402,7 +402,7 @@
       "id": 10,
       "name": "Mean_Node",
       "color": "#4c1541",
-      "visible": 0,
+      "active": 0,
       "element_points": 20,
       "zodiac_relation": "-1",
       "label": "North_Node",
@@ -412,7 +412,7 @@
       "id": 11,
       "name": "True_Node",
       "color": "#4c1541",
-      "visible": 0,
+      "active": 0,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "True_Node",
@@ -422,7 +422,7 @@
       "id": 12,
       "name": "1",
       "color": "#ff7e00",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "-1",
       "label": "Asc",
@@ -432,7 +432,7 @@
       "id": 13,
       "name": "10",
       "color": "#FF0000",
-      "visible": 1,
+      "active": 1,
       "element_points": 20,
       "zodiac_relation": "-1",
       "label": "Mc",
@@ -442,7 +442,7 @@
       "id": 14,
       "name": "7",
       "color": "#0000FF",
-      "visible": 1,
+      "active": 1,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "Dsc",
@@ -452,7 +452,7 @@
       "id": 15,
       "name": "4",
       "color": "#000000",
-      "visible": 0,
+      "active": 0,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "Ic",
