--- a/kerykeion/kr.config.json
+++ b/kerykeion/kr.config.json
@@ -205,7 +205,7 @@
     {
       "degree": 0,
       "name": "conjunction",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -215,7 +215,7 @@
     {
       "degree": 30,
       "name": "semi-sextile",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -225,7 +225,7 @@
     {
       "degree": 45,
       "name": "semi-square",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -235,7 +235,7 @@
     {
       "degree": 60,
       "name": "sextile",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -245,7 +245,7 @@
     {
       "degree": 72,
       "name": "quintile",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 0,
       "is_minor": 1,
@@ -255,7 +255,7 @@
     {
       "degree": 90,
       "name": "square",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -265,7 +265,7 @@
     {
       "degree": 120,
       "name": "trine",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -275,7 +275,7 @@
     {
       "degree": 135,
       "name": "sesquiquadrate",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -285,7 +285,7 @@
     {
       "degree": 144,
       "name": "biquintile",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -295,7 +295,7 @@
     {
       "degree": 150,
       "name": "quincunx",
-      "visible": 0,
+      "active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 0,
@@ -305,7 +305,7 @@
     {
       "degree": 180,
       "name": "opposition",
-      "visible": 1,
+      "active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -318,7 +318,7 @@
       "id": 0,
       "name": "Sun",
       "color": "#984b00",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "4",
       "label": "Sun",
@@ -328,7 +328,7 @@
       "id": 1,
       "name": "Moon",
       "color": "#150052",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "3",
       "label": "Moon",
@@ -338,7 +338,7 @@
       "id": 2,
       "name": "Mercury",
       "color": "#520800",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "2,5",
       "label": "Mercury",
@@ -348,7 +348,7 @@
       "id": 3,
       "name": "Venus",
       "color": "#400052",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "1,6",
       "label": "Venus",
@@ -358,7 +358,7 @@
       "id": 4,
       "name": "Mars",
       "color": "#540000",
-      "visible": 1,
+      "active": 1,
       "element_points": 15,
       "zodiac_relation": "0",
       "label": "Mars",
@@ -368,7 +368,7 @@
       "id": 5,
       "name": "Jupiter",
       "color": "#47133d",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "8",
       "label": "Jupiter",
@@ -378,7 +378,7 @@
       "id": 6,
       "name": "Saturn",
       "color": "#124500",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "9",
       "label": "Saturn",
@@ -388,7 +388,7 @@
       "id": 7,
       "name": "Uranus",
       "color": "#6f0766",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "10",
       "label": "Uranus",
@@ -398,7 +398,7 @@
       "id": 8,
       "name": "Neptune",
       "color": "#06537f",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "11",
       "label": "Neptune",
@@ -408,7 +408,7 @@
       "id": 9,
       "name": "Pluto",
       "color": "#713f04",
-      "visible": 1,
+      "active": 1,
       "element_points": 10,
       "zodiac_relation": "7",
       "label": "Pluto",
@@ -418,7 +418,7 @@
       "id": 10,
       "name": "Mean_Node",
       "color": "#4c1541",
-      "visible": 0,
+      "active": 0,
       "element_points": 20,
       "zodiac_relation": "-1",
       "label": "North_Node",
@@ -428,7 +428,7 @@
       "id": 11,
       "name": "Mean_Node",
       "color": "#4c1541",
-      "visible": 0,
+      "active": 0,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "Mean_Node",
@@ -438,7 +438,7 @@
       "id": 12,
       "name": "First_House",
       "color": "#ff7e00",
-      "visible": 1,
+      "active": 1,
       "element_points": 40,
       "zodiac_relation": "-1",
       "label": "Asc",
@@ -448,7 +448,7 @@
       "id": 13,
       "name": "Tenth_House",
       "color": "#FF0000",
-      "visible": 1,
+      "active": 1,
       "element_points": 20,
       "zodiac_relation": "-1",
       "label": "Mc",
@@ -458,7 +458,7 @@
       "id": 14,
       "name": "Seventh_House",
       "color": "#0000FF",
-      "visible": 0,
+      "active": 0,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "Dsc",
@@ -468,7 +468,7 @@
       "id": 15,
       "name": "Fourth_House",
       "color": "#000000",
-      "visible": 0,
+      "active": 0,
       "element_points": 0,
       "zodiac_relation": "-1",
       "label": "Ic",
